@@ -1,0 +1,10 @@
+<form method="post" action="resources/percent-sign-in-form-data-field-name.cgi" enctype="multipart/form-data">
+<input type="text" name="abc%40def" value="test">
+</form>
+<script>
+if (window.layoutTestController) {
+    layoutTestController.dumpAsText();
+    layoutTestController.waitUntilDone();
+}
+document.forms[0].submit();
+</script>
