@@ -1,3 +1,14 @@
+2009-12-10  Alexey Proskuryakov  <ap@apple.com>
+
+        Reviewed by Darin Adler.
+
+        https://bugs.webkit.org/show_bug.cgi?id=32140
+        REGRESSION(r50072): Mailman administrative functionality is broken
+
+        * http/tests/misc/percent-sign-in-form-field-name-expected.txt: Added.
+        * http/tests/misc/percent-sign-in-form-field-name.html: Added.
+        * http/tests/misc/resources/percent-sign-in-form-data-field-name.cgi: Added.
+
 2009-12-10  Kenneth Russell  <kbr@google.com>
 
         Reviewed by Oliver Hunt.
